[package]
name = "wander"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
chrono = "0.4"
humansize = "2.1"
open = "5.3"
sysinfo = "0.33"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dunce = "1.0" # Helps with Windows path normalization
image = { version = "0.25", features = ["default"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
zip = "0.6"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
